tests/compile-fail/map_key_not_hashable.ori
// Spec: comparable-hashable-traits-proposal.md ยง Error Messages
// Type used as map key must implement Hashable

type Point = { x: int, y: int }

#[compile_fail("cannot be used as map key")]
@test_map_key_not_hashable () -> void = run(
    let map: {Point: int} = {},
    ()
)
